--- a/taotao-cloud-microservice/taotao-cloud-modulith-ddd/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-modulith-ddd/build.gradle
@@ -28,12 +28,12 @@ dependencies {
     implementation 'org.springframework.modulith:spring-modulith-starter-insight:1.4.1'
     implementation 'org.springframework.modulith:spring-modulith-starter-jdbc:1.4.1'
     implementation 'org.springframework.modulith:spring-modulith-starter-jpa:1.4.1'
-    implementation 'org.springframework.modulith:spring-modulith-starter-mongodb:1.4.1'
+    //implementation 'org.springframework.modulith:spring-modulith-starter-mongodb:1.4.1'
     implementation 'org.springframework.modulith:spring-modulith-events-kafka:1.4.1'
     implementation 'org.springframework.modulith:spring-modulith-events-amqp:1.4.1'
     implementation 'org.springframework.modulith:spring-modulith-events-jpa:1.4.1'
     implementation 'org.springframework.modulith:spring-modulith-events-jdbc:1.4.1'
-    implementation 'org.springframework.modulith:spring-modulith-events-mongodb:1.4.1'
+    //implementation 'org.springframework.modulith:spring-modulith-events-mongodb:1.4.1'
     implementation 'org.springframework.modulith:spring-modulith-moments:1.4.1'
     implementation 'org.springframework.modulith:spring-modulith-observability:1.4.1'
     implementation 'org.springframework.modulith:spring-modulith-docs:1.4.1'
