--- a/taotao-cloud-microservice/taotao-cloud-modulith-ddd/src/main/resources/application-dev.yml
+++ b/taotao-cloud-microservice/taotao-cloud-modulith-ddd/src/main/resources/application-dev.yml
@@ -419,6 +419,9 @@ rocketmq:
       pull-batch-size: 10
 
 spring:
+  autoconfigure:
+    exclude:
+      - org.springframework.modulith.events.jdbc.JdbcEventPublicationAutoConfiguration
   threads:
     virtual:
       #1.Tomcat将使用虚拟线程来处理HTTP请求。这意味着处理Web请求的应用程序代码（例如控制器中的方法）将在虚拟线程上运行。
