--- a/taotao-cloud-microservice/taotao-cloud-open-platform/src/main/resources/application-dev.yml
+++ b/taotao-cloud-microservice/taotao-cloud-open-platform/src/main/resources/application-dev.yml
@@ -58,7 +58,7 @@ redisson:
   attemptTimeout: 10000   #等待获取锁超时时间,-1则是一直等待
   dataValidTime: 1800000
   single_server_config:
-    address: "127.0.0.1:6379"     #服务器地址,必填ip:port
+    address: "192.168.218.2:6379"     #服务器地址,必填ip:port
     subscription_connection_minimum_idle_size: 1     #用于发布和订阅连接的最小保持连接数（长连接）。Redisson内部经常通过发布和订阅来实现许多功能。长期保持一定数量的发布订阅连接是必须的。
     subscription_connection_pool_size: 50     #用于发布和订阅连接的连接池最大容量。连接池的连接数量自动弹性伸缩。
     connection_minimum_idle_size: 24     #最小保持连接数（长连接）。长期保持一定数量的连接有利于提高瞬时写入反应速度。
@@ -72,10 +72,10 @@ redisson:
 #  # ~/logs/arthas/arthas.log (用户目录下面)里可以找到具体端口日志
 #  telnetPort: -1
 #  httpPort: -1
-#  ip: 0.0.0.0   # 127.0.0.1只能本地访问，0.0.0.0则可网络访问，但是存在安全问题
+#  ip: 0.0.0.0   # 192.168.218.2只能本地访问，0.0.0.0则可网络访问，但是存在安全问题
 #  agent-id: ${spring.application.name}
 #  app-name: ${spring.application.name}
-#  tunnel-server: ws://127.0.0.1:7777/ws
+#  tunnel-server: ws://192.168.218.2:7777/ws
 
 dubbo:
   enabled: true
@@ -97,7 +97,7 @@ dubbo:
     shutwait: 3000
     dump-directory: ${user.home}/logs/${spring.application.name}/dubbo/
   registry:
-    address: nacos://127.0.0.1:8848
+    address: nacos://192.168.218.2:8848
     group: DUBBO_REGISTRY_GROUP
     cluster: CQ
     parameters:
@@ -164,14 +164,14 @@ dubbo:
     export-async: true
   monitor:
     id: ${spring.application.name}
-    address: 127.0.0.1:18080
+    address: 192.168.218.2:18080
     username: admin
     password: 123456
     group: taotao-cloud-dev
     version: ${ttcVersion}
   metadata-report:
     id: ${spring.application.name}
-    address: nacos://127.0.0.1:8848
+    address: nacos://192.168.218.2:8848
     username: nacos
     password: nacos
     group: DUBBO_REGISTRY_GROUP
@@ -180,7 +180,7 @@ dubbo:
       cluster-name: CQ
   config-center:
     id: ${spring.application.name}
-    address: nacos://127.0.0.1:8848
+    address: nacos://192.168.218.2:8848
     username: nacos
     password: nacos
     group: DUBBO_REGISTRY_GROUP
@@ -215,7 +215,7 @@ seata:
   data-source-proxy-mode: AT
   service:
     grouplist:
-      SC: 127.0.0.1:8091
+      SC: 192.168.218.2:8091
     vgroupMapping:
       taotao_cloud_tx_group: SC   # TC 集群（必须与seata-server保持一致）
     enable-degrade: false     # 降级开关
@@ -224,7 +224,7 @@ seata:
     type: nacos
     nacos:
       namespace: taotao-cloud-seata
-      server-addr: 127.0.0.1:8848
+      server-addr: 192.168.218.2:8848
       group: SEATA_GROUP
       username: nacos
       password: nacos
@@ -234,7 +234,7 @@ seata:
     nacos:
       namespace: taotao-cloud-seata
       application: seata-server
-      server-addr: 127.0.0.1:8848
+      server-addr: 192.168.218.2:8848
       group: SEATA_GROUP
       username: nacos
       password: nacos
@@ -482,12 +482,14 @@ spring:
       max-file-size: 200MB
       max-request-size: 200MB
   datasource:
+    dynamic:
+      enabled: false
     type: com.zaxxer.hikari.HikariDataSource
-    #url: jdbc:mysql://127.0.0.1:13306/${spring.application.name}?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useSSL=false&rewriteBatchedStatements=true&zeroDateTimeBehavior=convertToNull&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&allowMultiQueries=true&autoReconnect=true&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor
+    #url: jdbc:mysql://192.168.218.2:13306/${spring.application.name}?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useSSL=false&rewriteBatchedStatements=true&zeroDateTimeBehavior=convertToNull&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&allowMultiQueries=true&autoReconnect=true&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor
     #driver-class-name: com.mysql.cj.jdbc.Driver
-    #url: jdbc:p6spy:mysql://127.0.0.1:13306/${spring.application.name}?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useSSL=false&rewriteBatchedStatements=true&zeroDateTimeBehavior=convertToNull&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&allowMultiQueries=true&autoReconnect=true&rewriteBatchedStatements=true
+    #url: jdbc:p6spy:mysql://192.168.218.2:13306/${spring.application.name}?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useSSL=false&rewriteBatchedStatements=true&zeroDateTimeBehavior=convertToNull&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&allowMultiQueries=true&autoReconnect=true&rewriteBatchedStatements=true
     #driver-class-name: com.p6spy.engine.spy.P6SpyDriver
-    url: jdbc:mysql://127.0.0.1:3306/${spring.application.name}?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useSSL=false&rewriteBatchedStatements=true&zeroDateTimeBehavior=convertToNull&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&allowMultiQueries=true&autoReconnect=true&rewriteBatchedStatements=true
+    url: jdbc:mysql://192.168.218.2:3306/${spring.application.name}?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useSSL=false&rewriteBatchedStatements=true&zeroDateTimeBehavior=convertToNull&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&allowMultiQueries=true&autoReconnect=true&rewriteBatchedStatements=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 123456
@@ -547,7 +549,7 @@ spring:
     #      use_jdbc_metadata_defaults: false
   data:
     redis:
-      host: 127.0.0.1
+      host: 192.168.218.2
       port: 6379
       database: 1
       #password: ${TAOTAO_CLOUD_REDIS_PASSWORD:taotao-cloud}
@@ -556,7 +558,7 @@ spring:
       #  master:
       #  nodes:
       #cluster:
-      #  nodes: 127.0.0.1:6381,127.0.0.1:6382,127.0.0.1:6383,127.0.0.1:6384,127.0.0.1:6385,127.0.0.1:6386
+      #  nodes: 192.168.218.2:6381,192.168.218.2:6382,192.168.218.2:6383,192.168.218.2:6384,192.168.218.2:6385,192.168.218.2:6386
       #  max-redirects: 3
       client-type: lettuce
       lettuce:
@@ -586,7 +588,7 @@ spring:
             # 客户端名称
             clientName: "taotao-cloud-redis-client"
             # 节点地址
-            address: "redis://127.0.0.1:6379"
+            address: "redis://192.168.218.2:6379"
             # 发布和订阅连接的最小空闲连接数
             subscriptionConnectionMinimumIdleSize: 1
             # 发布和订阅连接池大小
@@ -611,7 +613,7 @@ spring:
           lockWatchdogTimeout: 10000
   kafka:
     enabled: true
-    bootstrap-servers: 127.0.0.1:9092
+    bootstrap-servers: 192.168.218.2:9092
     producer:
       retries: 1
       batch-size: 16384
@@ -637,7 +639,7 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          jwk-set-uri: http://127.0.0.1:33401/oauth2/jwks
+          jwk-set-uri: http://192.168.218.2:33401/oauth2/jwks
   cloud:
     openfeign:
       micrometer:
@@ -675,7 +677,7 @@ taotao:
       server: true
     zookeeper:
       enabled: false
-      connectString: 127.0.0.1:2181
+      connectString: 192.168.218.2:2181
     sensitive:
       enabled: false
     lock:
@@ -902,7 +904,7 @@ management:
     tracing:
       connect-timeout: 1
       read-timeout: 10
-      endpoint: http://127.0.0.1:9411/api/v2/spans
+      endpoint: http://192.168.218.2:9411/api/v2/spans
   tracing:
     enabled: true
     sampling:
@@ -923,7 +925,7 @@ management:
 #        enabled: true
 #  zipkin:
 #    enabled: true
-#    base-url: http://127.0.0.1:9411/
+#    base-url: http://192.168.218.2:9411/
 #    discoveryClientEnabled: false
 #    sender:
 #      type: WEB
@@ -992,7 +994,7 @@ kylin:
     primary-executor: com.taotao.boot.lock.kylin.executor.redisson.RedissonLockExecutor #默认执行器。默认redisson>zookeeper
     redisson: true              #是否开启redisson 默认true
     #zookeeper:
-    #  zk-servers: 127.0.0.1:2181 #zk的server地址，多个server之间使用英文逗号分隔开 。配置地址则开启zookeeper
+    #  zk-servers: 192.168.218.2:2181 #zk的server地址，多个server之间使用英文逗号分隔开 。配置地址则开启zookeeper
     #  session-timeout: 60000     #会话超时时间，默认值60000 单位：毫秒
     #  connection-timeout: 15000  #连接超时时间，默认值15000 单位：毫秒
     #  base-sleep-time-ms: 5000   #初始sleep时间，默认值5000 单位：毫秒
