--- a/taotao-cloud-microservice/taotao-cloud-open-platform/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-open-platform/build.gradle
@@ -1,15 +1,14 @@
-def apiProjects = project.parent.findProject("taotao-cloud-business").subprojects
-        .findAll {it -> it.name.endsWith("-api")}
+//def apiProjects = project.parent.findProject("taotao-cloud-business").subprojects
+//        .findAll {it -> it.name.endsWith("-api")}
 
 dependencies {
-    implementation apiProjects
+//    implementation apiProjects
 
     //cloud
     implementation "io.github.shuigedeng:taotao-cloud-starter-stream"
     implementation "io.github.shuigedeng:taotao-cloud-starter-alibaba"
     implementation "io.github.shuigedeng:taotao-cloud-starter-ttc"
     implementation "io.github.shuigedeng:taotao-cloud-starter-openfeign"
-    implementation "io.github.shuigedeng:taotao-cloud-starter-seata"
     implementation "io.github.shuigedeng:taotao-cloud-starter-sentinel"
 
     //boot
