--- a/taotao-cloud-tx/taotao-cloud-tx-server/build.gradle
+++ b/taotao-cloud-tx/taotao-cloud-tx-server/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'application'
+apply from: rootProject.file('gradle/springboot.gradle')
 
 dependencies {
     api "io.github.shuigedeng:taotao-boot-starter-core"
