--- a/taotao-cloud-ccsr/taotao-cloud-ccsr-server/build.gradle
+++ b/taotao-cloud-ccsr/taotao-cloud-ccsr-server/build.gradle
@@ -40,7 +40,7 @@ jar {
     zip64=true
 
     manifest {
-        attributes 'Main-Class': "com.taotao.cloud.tx.server.NettyServer"
+        attributes 'Main-Class': "com.taotao.cloud.ccsr.server.CcsrServerApplication"
         attributes 'Class-Path': configurations.compileClasspath.files.collect { "lib/$it.name" }.join(' ')
     }
 
