--- a/taotao-cloud-job/taotao-cloud-job-nameserver/build.gradle
+++ b/taotao-cloud-job/taotao-cloud-job-nameserver/build.gradle
@@ -1,3 +1,5 @@
+apply from: rootProject.file('gradle/springboot.gradle')
+
 dependencies {
     api project(":taotao-cloud-job:taotao-cloud-job-common")
     api project(":taotao-cloud-job:taotao-cloud-job-worker")
