--- a/taotao-cloud-rpc/taotao-cloud-rpc-nameserver/build.gradle
+++ b/taotao-cloud-rpc/taotao-cloud-rpc-nameserver/build.gradle
@@ -1,3 +1,5 @@
+apply from: rootProject.file('gradle/springboot.gradle')
+
 dependencies {
     api project(":taotao-cloud-rpc:taotao-cloud-rpc-core")
     api project(":taotao-cloud-rpc:taotao-cloud-rpc-filter")
