--- a/taotao-cloud-rpc/taotao-cloud-rpc-distribution/build.gradle
+++ b/taotao-cloud-rpc/taotao-cloud-rpc-distribution/build.gradle
@@ -1,7 +1,7 @@
 apply from: rootProject.file('gradle/shadow.gradle')
 
 tasks.register('releaseTarZip', Zip) {
-    dependsOn(':taotao-cloud-rpc:taotao-cloud-rpc-dashboard:jar')
+    dependsOn(':taotao-cloud-rpc:taotao-cloud-rpc-dashboard:bootJar')
 
     archiveFileName = "${project.name}-${project.version}.zip"
 
