--- a/taotao-cloud-ccsr/taotao-cloud-ccsr-dashboard/build.gradle
+++ b/taotao-cloud-ccsr/taotao-cloud-ccsr-dashboard/build.gradle
@@ -38,7 +38,7 @@ jar {
     zip64=true
 
     manifest {
-        attributes 'Main-Class': "com.taotao.cloud.rpc.dashboard.CcsrDashboardApplication"
+        attributes 'Main-Class': "com.taotao.cloud.ccsr.dashboard.CcsrDashboardApplication"
         attributes 'Class-Path': configurations.compileClasspath.files.collect { "lib/$it.name" }.join(' ')
     }
 
