--- a/taotao-cloud-mq/taotao-cloud-mq-example/build.gradle
+++ b/taotao-cloud-mq/taotao-cloud-mq-example/build.gradle
@@ -10,3 +10,50 @@ dependencies {
     api project(":taotao-cloud-mq:taotao-cloud-mq-proxy")
 }
 
+jar {
+    from(project(":taotao-cloud-mq:taotao-cloud-mq-broker").jar) { into("lib/") }
+    from(project(":taotao-cloud-mq:taotao-cloud-mq-client").jar) { into("lib/") }
+    from(project(":taotao-cloud-mq:taotao-cloud-mq-cluster").jar) { into("lib/") }
+    from(project(":taotao-cloud-mq:taotao-cloud-mq-common").jar) { into("lib/") }
+    from(project(":taotao-cloud-mq:taotao-cloud-mq-consistency").jar) { into("lib/") }
+    from(project(":taotao-cloud-mq:taotao-cloud-mq-metrics").jar) { into("lib/") }
+    from(project(":taotao-cloud-mq:taotao-cloud-mq-plugin").jar) { into("lib/") }
+    from(project(":taotao-cloud-mq:taotao-cloud-mq-proxy").jar) { into("lib/") }
+    from(project(":taotao-cloud-mq:taotao-cloud-mq-nameserver").jar) { into("lib/") }
+
+    //详细信息参考 https://docs.gradle.org/current/dsl/org.gradle.api.tasks.bundling.Jar.html
+    //基本的文件名
+    //archivesBaseName = 'Example'
+    //文件夹大于65535个，需要开启zip64
+    zip64 = true
+
+    manifest {
+        attributes 'Main-Class': "com.taotao.cloud.mq.example.consumer.ConsumerMain"
+        attributes 'Class-Path': configurations.runtimeClasspath.files.collect { "lib/$it.name" }.join(' ')
+    }
+
+    //gradle 处理重复文件，include 最后一个重复文件“胜出”的默认策略。
+    //duplicatesStrategy = 'include' // <<---- addition
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+
+    into('lib') { // 将第三方jar放入 lib目录中
+        from configurations.runtimeClasspath.findAll { it.name.endsWith('.jar') }
+    }
+
+    //打包依赖包
+    //from {
+    //    (configurations.runtimeClasspath).collect {
+    //        it.isDirectory() ? it : zipTree(it)
+    //    }
+    //}
+
+    //delete "${project.layout.buildDirectory.asFile.get()}\\libs\\lib"
+    //from configurations.runtimeClasspath
+    //into "${project.layout.buildDirectory.asFile.get()}\\libs\\lib"
+    //from configurations.compileClasspath
+    //into "${project.layout.buildDirectory.asFile.get()}\\libs\\lib"
+
+    //into('lib') { // 将第三方jar放入 lib目录中
+    //    from configurations.compile
+    //}
+}
