--- a/taotao-cloud-bigdata/taotao-cloud-paimon/build.gradle
+++ b/taotao-cloud-bigdata/taotao-cloud-paimon/build.gradle
@@ -122,7 +122,7 @@ dependencies {
     implementation("org.apache.hudi:hudi-flink1.20-bundle:1.0.2")
     implementation("org.apache.hudi:hudi-flink1.20.x:1.0.2")
     implementation("org.apache.hudi:hudi-gcp-bundle:1.0.2")
-    implementation("org.apache.hudi:hudi-cli-bundle_2.13:1.0.2")
+    //implementation("org.apache.hudi:hudi-cli-bundle_2.13:1.0.2")
     implementation("org.apache.hudi:hudi-datahub-sync-bundle:1.0.2")
     implementation("org.apache.hudi:hudi-hadoop-mr-bundle:1.0.2")
     implementation("org.apache.hudi:hudi-hive-sync-bundle:1.0.2")
