--- a/taotao-cloud-ccsr/taotao-cloud-ccsr-common/build.gradle
+++ b/taotao-cloud-ccsr/taotao-cloud-ccsr-common/build.gradle
@@ -3,11 +3,18 @@ dependencies {
         exclude group: "com.caucho", module: "hessian"
     }
 
-    api ("com.alipay.sofa:jraft-core:1.3.14") {
+    api 'com.google.guava:guava:33.4.8-jre'
+    api 'com.alibaba:fastjson:2.0.57'
+    api 'org.rocksdb:rocksdbjni:9.4.0'
+    api ("com.alipay.sofa:rpc-grpc-impl:1.4.0")
+    api 'com.alipay.sofa:hessian:3.5.5'
+    api('com.alipay.sofa:bolt:1.6.12') {
+        exclude group: 'org.slf4j', module: 'slf4j-api'
+    }
+    api ("com.alipay.sofa:jraft-core:1.4.0") {
         exclude group: "org.apache.logging.log4j", module: "log4j-api"
         exclude group: "org.apache.logging.log4j", module: "log4j-core"
         exclude group: "org.apache.logging.log4j", module: "log4j-slf4j-impl"
         exclude group: "org.apache.logging.log4j", module: "log4j-jcl"
     }
-    api ("com.alipay.sofa:rpc-grpc-impl:1.3.14")
 }
