--- a/taotao-cloud-job/taotao-cloud-job-distribution/build.gradle
+++ b/taotao-cloud-job/taotao-cloud-job-distribution/build.gradle
@@ -57,7 +57,7 @@ tasks.register("releaseTarGz", Tar) {
         into "target"
     }
 
-    duplicatesStrategy DuplicatesStrategy.EXCLUDE
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 
     finalizedBy("generateMd5ForTarGz")
 }
