--- a/taotao-cloud-ccsr/taotao-cloud-ccsr-distribution/build.gradle
+++ b/taotao-cloud-ccsr/taotao-cloud-ccsr-distribution/build.gradle
@@ -60,7 +60,7 @@ tasks.register("releaseTarGz", Tar) {
         into "target"
     }
 
-    duplicatesStrategy DuplicatesStrategy.EXCLUDE
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 
     finalizedBy("generateMd5ForTarGz")
 }
