--- a/taotao-cloud-bigdata/taotao-cloud-spark/build.gradle
+++ b/taotao-cloud-bigdata/taotao-cloud-spark/build.gradle
@@ -60,26 +60,26 @@ jar {
     dependsOn configurations.runtimeClasspath
 }
 
-shadowJar {
-    mergeServiceFiles()
-    archiveClassifier = ""
-
-    //transform(Log4j2PluginsCacheFileTransformer)
-    //version = 1.0
-    manifest {
-        attributes(
-                "Main-Class": "com.taotao.cloud.hudi.TaoTaoCloudLogHudi"
-        )
-    }
-
-    zip64 true
-    //dependencies {
-    //    exclude(dependency("xml-apis:xml-apis:.*"))
-    //    exclude(dependency("xerces:xercesImpl:.*"))
-    //    exclude(dependency("org.apache.avro:avro:1.7.*"))
-    //    exclude(dependency{ it.moduleGroup == "xml-apis" })
-    //}
-}
+//shadowJar {
+//    mergeServiceFiles()
+//    archiveClassifier = ""
+//
+//    //transform(Log4j2PluginsCacheFileTransformer)
+//    //version = 1.0
+//    manifest {
+//        attributes(
+//                "Main-Class": "com.taotao.cloud.hudi.TaoTaoCloudLogHudi"
+//        )
+//    }
+//
+//    zip64 true
+//    //dependencies {
+//    //    exclude(dependency("xml-apis:xml-apis:.*"))
+//    //    exclude(dependency("xerces:xercesImpl:.*"))
+//    //    exclude(dependency("org.apache.avro:avro:1.7.*"))
+//    //    exclude(dependency{ it.moduleGroup == "xml-apis" })
+//    //}
+//}
 
 
 configurations {
