--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-im/taotao-cloud-im-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-im/taotao-cloud-im-biz/build.gradle
@@ -42,9 +42,9 @@ dependencies {
 
 }
 
-mainClassName = "com.taotao.cloud.im.biz.TaoTaoCloudImApplication"
+//mainClassName = "com.taotao.cloud.im.biz.TaoTaoCloudImApplication"
 description = "im中心biz"
-archivesBaseName = 'taotao-cloud-im'
+//archivesBaseName = 'taotao-cloud-im'
 
 configurations {
     configureEach {
