--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-sys/taotao-cloud-sys-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-sys/taotao-cloud-sys-biz/build.gradle
@@ -129,9 +129,9 @@ dependencies {
     //}
 }
 
-mainClassName = "com.taotao.cloud.sys.biz.TaoTaoCloudSysApplication"
+//mainClassName = "com.taotao.cloud.sys.biz.TaoTaoCloudSysApplication"
 description = "系统中心biz"
-archivesBaseName = 'taotao-cloud-sys'
+//archivesBaseName = 'taotao-cloud-sys'
 
 configurations {
     configureEach {
