--- a/taotao-cloud-microservice/taotao-cloud-bff/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-bff/build.gradle
@@ -53,9 +53,9 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-mainClassName = "com.taotao.cloud.bff.TaoTaoCloudBffApplication"
+//mainClassName = "com.taotao.cloud.bff.TaoTaoCloudBffApplication"
 description = "bff中心"
-archivesBaseName = 'taotao-cloud-bff'
+//archivesBaseName = 'taotao-cloud-bff'
 
 //generateJava {
 //    schemaPaths = ["${projectDir}/src/main/resources/graphql-client"]
