--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-auth/taotao-cloud-auth-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-auth/taotao-cloud-auth-biz/build.gradle
@@ -116,9 +116,9 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-mainClassName = "com.taotao.cloud.auth.biz.TaoTaoCloudAuthApplication"
+//mainClassName = "com.taotao.cloud.auth.biz.TaoTaoCloudAuthApplication"
 description = "认证中心biz"
-archivesBaseName = 'taotao-cloud-auth'
+//archivesBaseName = 'taotao-cloud-auth'
 
 configurations {
     configureEach {
