--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-customer/taotao-cloud-customer-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-customer/taotao-cloud-customer-biz/build.gradle
@@ -38,9 +38,9 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-mainClassName = "com.taotao.cloud.customer.biz.TaoTaoCloudCustomerApplication"
+//mainClassName = "com.taotao.cloud.customer.biz.TaoTaoCloudCustomerApplication"
 description = "客服中心biz"
-archivesBaseName = 'taotao-cloud-customer'
+//archivesBaseName = 'taotao-cloud-customer'
 
 configurations {
     configureEach {
