--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-distribution/taotao-cloud-distribution-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-distribution/taotao-cloud-distribution-biz/build.gradle
@@ -31,9 +31,9 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-mainClassName = "com.taotao.cloud.distribution.biz.TaoTaoCloudDistributionApplication"
+//mainClassName = "com.taotao.cloud.distribution.biz.TaoTaoCloudDistributionApplication"
 description = "营销/分销中心biz"
-archivesBaseName = 'taotao-cloud-distribution'
+//archivesBaseName = 'taotao-cloud-distribution'
 
 configurations {
     configureEach {
