--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-goods/taotao-cloud-goods-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-goods/taotao-cloud-goods-biz/build.gradle
@@ -41,9 +41,9 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-mainClassName = "com.taotao.cloud.goods.biz.TaoTaoCloudGoodsApplication"
+//mainClassName = "com.taotao.cloud.goods.biz.TaoTaoCloudGoodsApplication"
 description = "商品中心biz"
-archivesBaseName = 'taotao-cloud-goods'
+//archivesBaseName = 'taotao-cloud-goods'
 
 configurations {
     configureEach {
