--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-message/taotao-cloud-message-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-message/taotao-cloud-message-biz/build.gradle
@@ -70,9 +70,9 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-mainClassName = "com.taotao.cloud.message.biz.TaoTaoCloudMessageApplication"
+//mainClassName = "com.taotao.cloud.message.biz.TaoTaoCloudMessageApplication"
 description = "消息中心biz"
-archivesBaseName = 'taotao-cloud-message'
+//archivesBaseName = 'taotao-cloud-message'
 
 configurations {
     configureEach {
