--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-operation/taotao-cloud-operation-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-operation/taotao-cloud-operation-biz/build.gradle
@@ -33,9 +33,9 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-mainClassName = "com.taotao.cloud.operation.biz.TaoTaoCloudOperationApplication"
+//mainClassName = "com.taotao.cloud.operation.biz.TaoTaoCloudOperationApplication"
 description = "运营中心biz"
-archivesBaseName = 'taotao-cloud-operation'
+//archivesBaseName = 'taotao-cloud-operation'
 
 configurations {
     configureEach {
