--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-payment/taotao-cloud-payment-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-payment/taotao-cloud-payment-biz/build.gradle
@@ -60,9 +60,9 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-mainClassName = "com.taotao.cloud.payment.biz.TaoTaoCloudPayApplication"
+//mainClassName = "com.taotao.cloud.payment.biz.TaoTaoCloudPayApplication"
 description = "支付中心biz"
-archivesBaseName = 'taotao-cloud-payment'
+//archivesBaseName = 'taotao-cloud-payment'
 
 configurations {
     configureEach {
