--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-promotion/taotao-cloud-promotion-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-promotion/taotao-cloud-promotion-biz/build.gradle
@@ -37,9 +37,9 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-mainClassName = "com.taotao.cloud.promotion.biz.TaoTaoCloudPromotionApplication"
+//mainClassName = "com.taotao.cloud.promotion.biz.TaoTaoCloudPromotionApplication"
 description = "促销中心biz"
-archivesBaseName = 'taotao-cloud-promotion'
+//archivesBaseName = 'taotao-cloud-promotion'
 
 configurations {
     configureEach {
