--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-report/taotao-cloud-report-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-report/taotao-cloud-report-biz/build.gradle
@@ -33,9 +33,9 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-mainClassName = "com.taotao.cloud.report.biz.TaoTaoCloudReportApplication"
+//mainClassName = "com.taotao.cloud.report.biz.TaoTaoCloudReportApplication"
 description = "报表中心biz"
-archivesBaseName = 'taotao-cloud-report'
+// = 'taotao-cloud-report'
 
 configurations {
     configureEach {
