--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-shortlink/taotao-cloud-shortlink-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-shortlink/taotao-cloud-shortlink-biz/build.gradle
@@ -33,9 +33,9 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-mainClassName = "com.taotao.cloud.shortlink.biz.TaoTaoCloudShortlinkApplication"
+//mainClassName = "com.taotao.cloud.shortlink.biz.TaoTaoCloudShortlinkApplication"
 description = "短链接中心biz"
-archivesBaseName = 'taotao-cloud-shortlink'
+//archivesBaseName = 'taotao-cloud-shortlink'
 
 configurations {
     configureEach {
