--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-stock/taotao-cloud-stock-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-stock/taotao-cloud-stock-biz/build.gradle
@@ -33,9 +33,9 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-mainClassName = "com.taotao.cloud.stock.biz.TaoTaoCloudStockApplication"
+//mainClassName = "com.taotao.cloud.stock.biz.TaoTaoCloudStockApplication"
 description = "库存中心biz"
-archivesBaseName = 'taotao-cloud-stock'
+//archivesBaseName = 'taotao-cloud-stock'
 
 configurations {
     configureEach {
