--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-tenant/taotao-cloud-tenant-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-tenant/taotao-cloud-tenant-biz/build.gradle
@@ -34,9 +34,9 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-mainClassName = "com.taotao.cloud.tenant.biz.TaoTaoCloudTenantApplication"
+//mainClassName = "com.taotao.cloud.tenant.biz.TaoTaoCloudTenantApplication"
 description = "租户中心biz"
-archivesBaseName = 'taotao-cloud-tenant'
+//archivesBaseName = 'taotao-cloud-tenant'
 
 configurations {
     configureEach {
