--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-wechat/taotao-cloud-wechat-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-wechat/taotao-cloud-wechat-biz/build.gradle
@@ -56,9 +56,9 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-mainClassName = "com.taotao.cloud.wechat.biz.TaoTaoCloudWechatApplication"
+//mainClassName = "com.taotao.cloud.wechat.biz.TaoTaoCloudWechatApplication"
 description = "微信中心biz"
-archivesBaseName = 'taotao-cloud-wechat'
+//archivesBaseName = 'taotao-cloud-wechat'
 
 configurations {
     configureEach {
