--- a/taotao-cloud-microservice/taotao-cloud-data-sync/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-data-sync/build.gradle
@@ -194,9 +194,9 @@ dependencies {
     implementation "com.alibaba.fastjson2:fastjson2:2.0.58"
 }
 
-mainClassName = "com.taotao.cloud.data.sync.TaoTaoCloudDataSyncApplication"
+//mainClassName = "com.taotao.cloud.data.sync.TaoTaoCloudDataSyncApplication"
 description = "数据同步中心"
-archivesBaseName = 'taotao-cloud-data-sync'
+//archivesBaseName = 'taotao-cloud-data-sync'
 
 configurations {
     configureEach {
