--- a/taotao-cloud-microservice/taotao-cloud-generator/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-generator/build.gradle
@@ -26,9 +26,9 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-mainClassName = "com.taotao.cloud.generator.TaoTaoCloudGeneratorApplication"
+//mainClassName = "com.taotao.cloud.generator.TaoTaoCloudGeneratorApplication"
 description = "代码生成器中心biz"
-archivesBaseName = 'taotao-cloud-generator'
+//archivesBaseName = 'taotao-cloud-generator'
 
 configurations {
     configureEach {
