--- a/taotao-cloud-tx/taotao-cloud-tx-distribution/build.gradle
+++ b/taotao-cloud-tx/taotao-cloud-tx-distribution/build.gradle
@@ -1,4 +1,4 @@
-apply from: rootProject.file('gradle/shadow.gradle')
+//apply from: rootProject.file('gradle/shadow.gradle')
 
 apply plugin: 'application'
 
