--- a/taotao-cloud-bigdata/build.gradle
+++ b/taotao-cloud-bigdata/build.gradle
@@ -1,6 +1,6 @@
 configure(subprojects){ project ->
     //apply from: rootProject.file('gradle/sonar.gradle')
-    //apply from: rootProject.file('gradle/shadow.gradle')
+    apply from: rootProject.file('gradle/shadow.gradle')
     apply from: rootProject.file('gradle/google-tools-jib.gradle')
 
     dependencies {
