--- a/taotao-cloud-job/taotao-cloud-job-distribution/build.gradle
+++ b/taotao-cloud-job/taotao-cloud-job-distribution/build.gradle
@@ -1,4 +1,4 @@
-//apply from: rootProject.file('gradle/shadow.gradle')
+apply from: rootProject.file('gradle/shadow.gradle')
 
 tasks.register('releaseTarZip', Zip) {
     dependsOn(':taotao-cloud-job:taotao-cloud-job-dashboard:bootJar')
