--- a/taotao-cloud-mq/taotao-cloud-mq-distribution/build.gradle
+++ b/taotao-cloud-mq/taotao-cloud-mq-distribution/build.gradle
@@ -1,4 +1,4 @@
-//apply from: rootProject.file('gradle/shadow.gradle')
+apply from: rootProject.file('gradle/shadow.gradle')
 
 tasks.register('releaseTarZip', Zip) {
     dependsOn(':taotao-cloud-mq:taotao-cloud-mq-dashboard:bootJar')
