--- a/taotao-cloud-warehouse/taotao-cloud-realtime-warehouse/src/main/resources/application-datagen.yml
+++ b/taotao-cloud-warehouse/taotao-cloud-realtime-warehouse/src/main/resources/application-datagen.yml
@@ -24,7 +24,7 @@ spring:
     name: taotao-cloud-warehouse-datageneration
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:mysql://${TAOTAO_CLOUD_MYSQL_HOST:192.168.218.3}:${TAOTAO_CLOUD_MYSQL_PORT:3306}/${spring.application.name}?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useSSL=false&rewriteBatchedStatements=true&zeroDateTimeBehavior=convertToNull&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&allowMultiQueries=true&autoReconnect=true
+    url: jdbc:mysql://192.168.218.3:3306/${spring.application.name}?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useSSL=false&rewriteBatchedStatements=true&zeroDateTimeBehavior=convertToNull&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&allowMultiQueries=true&autoReconnect=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: bigdata
     password: bigdata
